# clash-verge-rev-smart-node-center

./: .gitignore  Cargo.toml  Changelog.md  Makefile.toml  README.md  biome.json  eslint.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/agents/: agentic-workflows.agent.md
.github/aw/: actions-lock.json
.github/workflows/: autobuild-check-test.yml  autobuild.yml  cargo-audit.yml  check-commit-needs-build.yml  clean-old-assets.yml  cross_check.yaml  dev.yml  frontend-check.yml  lint-clippy.yml  pr-ai-slop-review.lock.yml  pr-ai-slop-review.md  release.yml  rustfmt.yml  telegram-notify.yml  updater.yml
.husky/: pre-commit  pre-push
crates/clash-verge-draft/: Cargo.toml
crates/clash-verge-draft/src/: lib.rs
crates/clash-verge-draft/tests/: test_me.rs
crates/clash-verge-i18n/: Cargo.toml
crates/clash-verge-i18n/locales/: ar.yml  de.yml  en.yml  es.yml  fa.yml  id.yml  jp.yml  ko.yml  ru.yml  tr.yml  tt.yml  zh.yml  zhtw.yml
crates/tauri-plugin-clash-verge-sysinfo/: Cargo.toml
crates/tauri-plugin-clash-verge-sysinfo/src/: commands.rs  lib.rs
docs/: Changelog.history.md  README_en.md  README_es.md  README_fa.md  README_ja.md  README_ko.md  README_ru.md
docs/snc/: 00_INDEX_AND_PROJECT_STATUS.md  01_SOURCE_CODE_ANALYSIS_REPORT.md  02_PRD_PRODUCT_REQUIREMENTS_DOCUMENT.md  03_SAD_SOFTWARE_ARCHITECTURE_DESIGN.md  04_RISK_ANALYSIS_REPORT.md  05_MODULE_DECOMPOSITION_REPORT.md  06_DATABASE_DESIGN.md  07_API_DESIGN.md  08_TEST_PLAN.md  CHANGELOG.md  HANDOFF.md
scripts/: prebuild.mjs  sync-mihomo-version.mjs  updater-fixed-webview2.mjs  updater.mjs
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: constants.rs  lib.rs  main.rs
src-tauri/src/cmd/: app.rs  clash.rs  mod.rs  profile.rs  runtime.rs  service.rs
src-tauri/src/config/: clash.rs  config.rs  mod.rs  prfitem.rs  profiles.rs  runtime.rs  verge.rs
src-tauri/src/core/: backup.rs  hotkey.rs  logger.rs  mod.rs  service.rs  sysopt.rs  timer.rs  validate.rs
src-tauri/src/enhance/: field.rs  mod.rs  script.rs  seq.rs  tun.rs
src-tauri/src/feat/: clash.rs  mod.rs
src-tauri/src/module/: lightweight.rs
src-tauri/src/utils/: connections_stream.rs  help.rs  init.rs  network.rs  server.rs  tray_speed.rs  window_manager.rs
src/components/base/: base-dialog.tsx  base-fieldset.tsx  base-loading-overlay.tsx  base-search-box.tsx  index.ts  sticky-virtual-list.tsx
src/components/connection/: connection-column-manager.tsx  connection-detail.tsx  connection-relative-time.tsx  connection-row-item.tsx  connection-row-view.ts  connection-table.tsx
src/components/home/: clash-mode-card.tsx  current-proxy-card.tsx  enhanced-canvas-traffic-graph.tsx  enhanced-traffic-stats.tsx  ip-info-card.tsx  system-info-card.tsx
src/components/layout/: layout-item.tsx  layout-traffic.tsx  traffic-graph.tsx
src/components/profile/: editor-viewer.tsx  profile-item.tsx  profile-more.tsx  qr-viewer.tsx
src/components/proxy/: provider-button.tsx  proxy-chain.tsx  proxy-group-tools.tsx  proxy-groups-chain.tsx  proxy-groups.tsx  proxy-item-mini.tsx  proxy-item.tsx  proxy-render.tsx  (+1 more)
src/hooks/: use-clash-log.ts  use-clash.ts  use-connection-data.ts  use-icon-cache.ts  use-listen.ts  use-log-data.ts  use-mihomo-ws-subscription.ts  use-network.ts  use-profiles.ts  use-proxy-delay-state.ts  use-proxy-selection.ts  use-system-proxy-state.ts  use-system-state.ts  use-traffic-data.ts  use-update.ts  use-verge.ts
src/pages/: _layout.tsx  _routers.tsx  connections.tsx  logs.tsx  profiles.tsx  proxies.tsx
src/providers/: app-data-provider.tsx
src/services/: api.ts  cmds.ts  delay.ts  i18n.ts  query-client.ts  smart-node.ts  states.ts
src/types/: global.d.ts
src/utils/: traffic-diagnostics.ts
(+154 files in other folders)
